Fix bug content overlap sidebar
Summary: Just fix a small bug.

Test Plan: Run it.

Reviewers: mederic, thibault

Reviewed By: mederic, thibault

Maniphest Tasks: T550

Differential Revision: https://phabricator.omisego.io/D339

--- a/apps/admin_panel/assets/src/styles/containers/_authenticated_layout.scss
+++ b/apps/admin_panel/assets/src/styles/containers/_authenticated_layout.scss
@@ -1,8 +1,15 @@
 .authenticated-layout {
+  @media (min-width: 992px) {
+    &__sidebar {
+      padding-right: 0rem;
+      position: fixed;
+    }
+  }
+
   &__sidebar {
     padding-right: 0rem;
-    position: fixed;
   }
+
   &__main {
     padding: 1rem 5rem 0rem 5rem; // top right bot left
   }
